# beanstack-elastic-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  fly.toml  main.py  pyproject.toml
demo/: script.md
demo/video/: package-lock.json  package.json  tsconfig.json
demo/video/src/: Root.tsx  Video.tsx
demo/video/src/components/: ArchitectureDiagram.tsx  BarChart.tsx  Logo.tsx  (+12 more)
scripts/data_generation/: branches.py  quarterly_reports.py  staff.py  weekly_reports.py
scripts/data_generation/models/: quarterly_report.py
scripts/es_setup/: 00_enable_agent_builder.py  00_init_es.py  01_setup_indices.py  02_ingest_data.py  03_ingest_reports.py  04_ingest_financial.py  10_setup_agent.py  10_setup_workflows.py  11_setup_agent.py  11_setup_workflows.py  es_client.py  kibana_client.py  system_prompt.py
scripts/es_setup/mappings/: branches.json  financial.json  reports.json  staff.json
scripts/es_setup/tools/: __init__.py  branch_financial_summary.py  branch_report_timeline.py  branches_by_region.py  branches_without_reports.py  equipment_issues_by_branch.py  report_count_by_branch.py  revenue_by_region.py  search_branches.py  search_financial_reports.py  search_reports.py  search_staff.py  staff_by_branch.py  turnover_by_branch.py  underperforming_branches.py  wf_daily_brief.py  wf_escalation.py  wf_missing_reports_reminder.py  wf_send_manager_message.py
scripts/es_setup/workflows/: escalation.yaml  missing_reports_reminder.yaml  send_manager_message.yaml
slack_bot/: README.md  bot.py  last_response.json  slack_app_manifest.json
(+17 files in other folders)
